# gnss-converters

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.AFL  Dockerfile_Haskell  Jenkinsfile  JenkinsfileAFL  OWNERS.md  README.md  ci-build.sh  codecov.yml  docker-compose.yml  sonar-project.properties  travis.sh
c/: .clang-tidy  .gitignore  CMakeLists.txt  CmakeLists.txt
c/Interface/: rtcm3_sbp_interface.h
c/afl/: CMakeLists.txt  make_afl_testcases.c  make_afl_testcases.h  make_rtcm_testcases.c  make_ubx_testcases.c
c/afl/afl-runner/: Cargo.toml
c/afl/testcases/rtcm3tosbp/: 1002_multiple.rtcm  1004_single.rtcm  1005.rtcm  1006.rtcm  1010_single.rtcm  1012_multiple.rtcm  1012_single.rtcm  1029.rtcm  1033.rtcm  1044.rtcm  1059.rtcm  1060.rtcm  1230.rtcm  1242.rtcm  1260.rtcm  1261.rtcm  1267.rtcm  README
c/afl/testcases/ubx2sbp/: mon_hw.ubx  nav_pvt.ubx  nav_sat.ubx  rxm_sfrbx_sbas.ubx
c/cmake/: ASAN-targets.cmake  FindSbp.cmake  FindSwiftnav.cmake
c/gnss_converters/include/gnss-converters/: ixcom_sbp.h  nmea.h  options.h  rtcm3_sbp.h  sbp_nmea.h  time_truth.h  ubx_sbp.h
c/gnss_converters/src/: CMakeLists.txt  common.c  common.h  ixcom_sbp.c  nmea.c  options.c  rtcm3_sbp.c  rtcm3_sbp_ephemeris.c  rtcm3_sbp_internal.h  rtcm3_sbp_ssr.c  rtcm3_utils.c  rtcm3_utils.h  sbp_nmea.c  sbp_nmea_internal.h  time_truth.c  ubx_sbp.c
c/gnss_converters/src/ephemeris/: sbas.c  sbas.h
c/gnss_converters/src/ubx_ephemeris/: bds.c  gal.c  gal.h  (+3 more)
c/gnss_converters/test/: CMakeLists.txt  check_gnss_converters.h  check_gnss_converters_main.c  check_nmea.c  check_nmea_gpths.c  check_options.c  check_time_truth.c  nmea_truth.h
c/gnss_converters_extra/: CMakeLists.txt
c/gnss_converters_extra/src/: CMakeLists.txt  sbp_conv.c  sbp_rtcm3.c  sbp_rtcm3_ephemeris.c  sbp_rtcm3_internal.h
c/gnss_converters_extra/test/: CMakeLists.txt  check_utils.c
c/include/: rtcm3_sbp.h  sbp_nmea.h  sbp_rtcm3.h
c/include/gnss-converters/: eph_sat_data.h  ixcom_sbp.h  nmea.h  options.h  rtcm3_sbp.h  sbp_conv.h  sbp_nmea.h  sbp_rtcm3.h  time_truth.h  ubx_sbp.h  utils.h
c/ixcom2sbp/src/: CMakeLists.txt  ixcom2sbp.c
c/ixcom2sbp/test/: CMakeLists.txt  check_ixcom2sbp.c
c/libixcom/src/: CMakeLists.txt  decode.c  encode.c  messages.c
c/libixcom/test/: CMakeLists.txt  check_ixcom.c  check_main.c  check_pedantic.cc  check_suites.h
c/librtcm/: CMakeLists.txt
c/librtcm/src/: CMakeLists.txt  bits.c  decode.c  decode_helpers.h  encode.c  eph_decode.c  eph_encode.c  logging.c  msm_utils.c  ssr_decode.c  sta_decode.c
c/librtcm/test/: CMakeLists.txt  check_pedantic.cc  rtcm_decoder_tests.c  rtcm_decoder_tests.h  sta_rtcm3_tests.c  test_assert.h
c/libubx/src/: CMakeLists.txt  decode.c  decode_helpers.h  encode.c
c/libubx/test/: CMakeLists.txt  check_main.c  check_pedantic.cc  check_suites.h  check_ubx.c
c/nov2sbp/: CMakeLists.txt
c/nov2sbp/parser/: CMakeLists.txt  binary_header.cc  binary_header.h  message.h  message_bestpos.cc  message_bestvel.cc  message_bestvel.h  message_gloephemeris.cc  message_gpsephem.cc  message_gpsephem.h  message_insatt.cc  message_insatt.h  message_rangecmp.cc  message_rawimusx.cc  message_rawimusx.h  novatel.h  parser.cc  parser.h  read_little_endian.h  test_parser.cc  test_read_little_endian.cc
c/nov2sbp/src/: CMakeLists.txt  nov2sbp.cc  nov2sbp_main.cc  send_sbp_obs_messages.cc  swiftnav_conversion_helpers.cc  swiftnav_conversion_helpers.h
c/rtcm3tosbp/src/: CMakeLists.txt  rtcm3tosbp.c  rtcm3tosbp_main.c
c/rtcm3tosbp/test/: CMakeLists.txt  check_rtcm3.c  check_rtcm3.h  check_rtcm3_main.c  check_rtcm3_ssr.c  check_rtcm3_time.c
c/sbp2rtcm/src/: CMakeLists.txt  sbp2rtcm.c  sbp2rtcm_main.c
c/scripts/: afl-simplify-testcases.sh  analyse_crashes.sh  check_asan_afl_env.sh  collect_known_failures.sh  empty_translation_unit.c  rerun_known_failures.sh  start_afl_test.sh
c/src/: CMakeLists.txt  common.c  common.h  ixcom2sbp.c  ixcom_sbp.c  nmea.c  nmea.h  options.c  rtcm3_msm_utils.c  rtcm3_msm_utils.h  rtcm3_sbp.c  rtcm3_sbp_ephemeris.c  rtcm3_sbp_internal.h  rtcm3_sbp_ssr.c  rtcm3_utils.c  rtcm3_utils.h  rtcm3tosbp.c  sbp2rtcm.c  sbp2rtcm_main.c  sbp_conv.c  sbp_nmea.c  sbp_nmea_internal.h  sbp_rtcm3.c  sbp_rtcm3_ephemeris.c  sbp_rtcm3_internal.h  ubx2sbp.c  ubx2sbp_main.c  ubx_sbp.c
c/src/gnss_converters/: CMakeLists.txt  common.c  ixcom_sbp.c  nmea.c  rtcm3_sbp.c  rtcm3_sbp_ephemeris.c  rtcm3_sbp_internal.h  rtcm3_sbp_ssr.c  rtcm3_utils.c  rtcm3_utils.h  sbp_nmea.c  sbp_nmea_internal.h  sbp_rtcm3.c  sbp_rtcm3_ephemeris.c  sbp_rtcm3_internal.h  time_truth.c  ubx_sbp.c
c/src/gnss_converters_extra/: CMakeLists.txt  sbp_conv.c
c/src/ixcom2sbp/: CMakeLists.txt  ixcom2sbp.c  ixcom2sbp_main.c
c/src/nov2sbp/: CMakeLists.txt  README.md  nov2sbp.cc  nov2sbp_main.cc  swiftnav_conversion_helpers.cc  swiftnav_conversion_helpers.h
c/src/rtcm3tosbp/: CMakeLists.txt  rtcm3tosbp.c  rtcm3tosbp_main.c
c/src/sbp2rtcm/: CMakeLists.txt  sbp2rtcm.c
c/src/ubx2sbp/: CMakeLists.txt  ubx2sbp.c  ubx2sbp_main.c  ubx2sbp_main.h
c/src/ubx_ephe/: gps_l1ca.c  gps_l1ca.h  ubx_ephe.c  ubx_ephe.h
c/src/ubx_ephemeris/: bds.c  gal.c  glo.c  gps.c  sbas.c
c/tests/: CMakeLists.txt  check_ixcom.c  check_ixcom.h  check_main.c  check_nmea.c  check_options.c  check_rtcm3.c  check_rtcm3.h  check_rtcm3_ssr.c  check_rtcm3_time.c  check_suites.h  check_time_truth.c  check_ubx.c  check_ubx.h  check_utils.c  check_utils.h  nmea_truth.h  rtcm3_sbp_test.c  rtcm3_sbp_test.h
c/tests/afl/: CMakeLists.txt  make_afl_testcases.c  make_rtcm_testcases.c
c/tests/data/: 1012_first.rtcm  beidou_invalid_fine_pseudorange.rtcm  clk.rtcm  eph_wn.rtcm  geo++_HEM.rtcm  geo++_NAV.rtcm  geo++_NOV.rtcm  geo++_SEP1.rtcm  geo++_SOK.rtcm  geo++_TPS1.rtcm  jenoba-jrr32m.rtcm3  jenoba-jvr32m.rtcm3  leica.rtcm  msm.rtcm  msm7.rtcm  navcom.rtcm  piksi-2Hz.rtcm3  piksi-gps-glo.sbp  rxm_rawx.ubx  rxm_sfrbx.ubx  sept.rtcm  test_glo_eph.rtcm  wn-rollover2.rtcm
c/ubx2sbp/src/: CMakeLists.txt  ubx2sbp.c  ubx2sbp_main.c  ubx2sbp_main.h
c/ubx2sbp/test/: CMakeLists.txt  check_ubx2sbp.c  config.h.in
(+149 files in other folders)
