[package]
name = "afl-runner"
version = "0.1.0"
authors = ["Sam Lewis <sam.vr.lewis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
threadpool = "1.8.1"
walkdir = "2"
lazy_static = "1.4.0"
regex = "1"
clap = "3.0.0-beta.2"
subprocess = "0.2.7"